// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirects correctly 1`] = `null`;

exports[`renders Component correctly 1`] = `
<div
  className="Component-root-5"
>
  <div
    className="Component-header-4"
  />
  <div
    className="Component-container-3"
  >
    <h2
      className="MuiTypography-root-6 MuiTypography-h2-19 MuiTypography-alignCenter-29"
    >
      PRIZEY
    </h2>
    <div
      className="Component-caption-1"
    />
    <div
      className="Component-children-2"
    >
      <div
        aria-labelledby="Are you sure?"
        classes={
          Object {
            "paper": "PlayAgain-paper-42",
          }
        }
        fullWidth={true}
        onClose={[Function]}
        open={false}
      >
        <div
          className="MuiDialogTitle-root-43"
        >
          <h2
            className="MuiTypography-root-6 MuiTypography-title-12"
          >
            Are you sure?
          </h2>
        </div>
        <div
          className="MuiDialogContent-root-44"
        >
          <p
            className="MuiTypography-root-6 MuiDialogContentText-root-45 MuiTypography-subheading-13 MuiTypography-colorTextSecondary-39"
          >
            This action can't be undone.
          </p>
        </div>
        <div
          className="MuiDialogActions-root-46"
        >
          <button
            aria-label="cancel"
            autoFocus={true}
            className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-text-50 MuiButton-textPrimary-51 MuiButton-flat-53 MuiButton-flatPrimary-54 MuiDialogActions-action-47"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-49"
            >
              Cancel
            </span>
            <span
              className="MuiTouchRipple-root-77"
            />
          </button>
          <button
            aria-label="confirm"
            className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-text-50 MuiButton-textPrimary-51 MuiButton-flat-53 MuiButton-flatPrimary-54 MuiDialogActions-action-47"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-49"
            >
              Confirm
            </span>
            <span
              className="MuiTouchRipple-root-77"
            />
          </button>
        </div>
      </div>
      <h5
        className="MuiTypography-root-6 MuiTypography-h5-22 MuiTypography-alignCenter-29 ConfirmOrderComponent-title-85"
      >
        Confirm Order
      </h5>
      <p
        className="MuiTypography-root-6 MuiTypography-body2-14 ConfirmOrderComponent-field-84"
      >
        Full Name
        :
         
        <span
          className="ConfirmOrderComponent-value-86"
        >
          john john
        </span>
      </p>
      <p
        className="MuiTypography-root-6 MuiTypography-body2-14 ConfirmOrderComponent-field-84"
      >
        Address
        :
         
        <span
          className="ConfirmOrderComponent-value-86"
        >
          1# street
        </span>
      </p>
      <p
        className="MuiTypography-root-6 MuiTypography-body2-14 ConfirmOrderComponent-field-84"
      >
        City
        :
         
        <span
          className="ConfirmOrderComponent-value-86"
        >
          porto alegre
        </span>
      </p>
      <p
        className="MuiTypography-root-6 MuiTypography-body2-14 ConfirmOrderComponent-field-84"
      >
        State / Province / Region
        :
         
        <span
          className="ConfirmOrderComponent-value-86"
        >
          RS
        </span>
      </p>
      <p
        className="MuiTypography-root-6 MuiTypography-body2-14 ConfirmOrderComponent-field-84"
      >
        Postal Code / ZIP
        :
         
        <span
          className="ConfirmOrderComponent-value-86"
        />
      </p>
      <p
        className="MuiTypography-root-6 MuiTypography-body2-14 ConfirmOrderComponent-field-84"
      >
        Clothing Size
        :
         
        <span
          className="ConfirmOrderComponent-value-86"
        >
          M
        </span>
      </p>
      <p
        className="MuiTypography-root-6 MuiTypography-body2-14 ConfirmOrderComponent-field-84"
      >
        Shoe Size
        :
         
        <span
          className="ConfirmOrderComponent-value-86"
        >
          42
        </span>
      </p>
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      />
      <button
        className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-contained-59 MuiButton-containedPrimary-60 MuiButton-raised-62 MuiButton-raisedPrimary-63 MuiButton-fullWidth-73"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-49"
        >
          SHIP IT!
        </span>
        <span
          className="MuiTouchRipple-root-77"
        />
      </button>
      <button
        aria-label="Cancel"
        className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-outlined-56 MuiButton-outlinedPrimary-57 MuiButton-fullWidth-73"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-49"
        >
          CANCEL
        </span>
        <span
          className="MuiTouchRipple-root-77"
        />
      </button>
    </div>
    <p
      className="MuiTypography-root-6 MuiTypography-body1-15 MuiTypography-alignCenter-29"
    />
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  afterCreate={[Function]}
  name="orders"
  render={[Function]}
>
  New -
  <div>
    render -
    <div
      className="Component-root-5"
    >
      <div
        className="Component-header-4"
      />
      <div
        className="Component-container-3"
      >
        <h2
          className="MuiTypography-root-6 MuiTypography-h2-19 MuiTypography-alignCenter-29"
        >
          PRIZEY
        </h2>
        <div
          className="Component-caption-1"
        />
        <div
          className="Component-children-2"
        >
          <div
            aria-labelledby="Are you sure?"
            classes={
              Object {
                "paper": "PlayAgain-paper-42",
              }
            }
            fullWidth={true}
            onClose={[Function]}
            open={false}
          >
            <div
              className="MuiDialogTitle-root-43"
            >
              <h2
                className="MuiTypography-root-6 MuiTypography-title-12"
              >
                Are you sure?
              </h2>
            </div>
            <div
              className="MuiDialogContent-root-44"
            >
              <p
                className="MuiTypography-root-6 MuiDialogContentText-root-45 MuiTypography-subheading-13 MuiTypography-colorTextSecondary-39"
              >
                This action can't be undone.
              </p>
            </div>
            <div
              className="MuiDialogActions-root-46"
            >
              <button
                aria-label="cancel"
                autoFocus={true}
                className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-text-50 MuiButton-textPrimary-51 MuiButton-flat-53 MuiButton-flatPrimary-54 MuiDialogActions-action-47"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-49"
                >
                  Cancel
                </span>
                <span
                  className="MuiTouchRipple-root-77"
                />
              </button>
              <button
                aria-label="confirm"
                className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-text-50 MuiButton-textPrimary-51 MuiButton-flat-53 MuiButton-flatPrimary-54 MuiDialogActions-action-47"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-49"
                >
                  Confirm
                </span>
                <span
                  className="MuiTouchRipple-root-77"
                />
              </button>
            </div>
          </div>
          <h5
            className="MuiTypography-root-6 MuiTypography-h5-22 MuiTypography-alignCenter-29"
          >
            Confirm Order
          </h5>
          <p
            className="MuiTypography-root-6 MuiTypography-body2-14"
          >
            Full Name
            :
             
            <span>
              john john
            </span>
          </p>
          <p
            className="MuiTypography-root-6 MuiTypography-body2-14"
          >
            Address
            :
             
            <span>
              1# street
            </span>
          </p>
          <p
            className="MuiTypography-root-6 MuiTypography-body2-14"
          >
            City
            :
             
            <span>
              porto alegre
            </span>
          </p>
          <p
            className="MuiTypography-root-6 MuiTypography-body2-14"
          >
            State / Province / Region
            :
             
            <span>
              RS
            </span>
          </p>
          <p
            className="MuiTypography-root-6 MuiTypography-body2-14"
          >
            Postal Code / ZIP
            :
             
            <span />
          </p>
          <p
            className="MuiTypography-root-6 MuiTypography-body2-14"
          >
            Clothing Size
            :
             
            <span>
              M
            </span>
          </p>
          <p
            className="MuiTypography-root-6 MuiTypography-body2-14"
          >
            Shoe Size
            :
             
            <span>
              42
            </span>
          </p>
          <div
            style={
              Object {
                "textAlign": "center",
              }
            }
          />
          <button
            className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-contained-59 MuiButton-containedPrimary-60 MuiButton-raised-62 MuiButton-raisedPrimary-63 MuiButton-fullWidth-73"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-49"
            >
              SHIP IT!
            </span>
            <span
              className="MuiTouchRipple-root-77"
            />
          </button>
          <button
            aria-label="Cancel"
            className="MuiButtonBase-root-74 MuiButton-root-48 MuiButton-outlined-56 MuiButton-outlinedPrimary-57 MuiButton-fullWidth-73"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-49"
            >
              CANCEL
            </span>
            <span
              className="MuiTouchRipple-root-77"
            />
          </button>
        </div>
        <p
          className="MuiTypography-root-6 MuiTypography-body1-15 MuiTypography-alignCenter-29"
        />
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
  </div>
</div>
`;
